--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,3 @@
-[project]
-name = "did-wba-example"
-version = "0.1.0"
-description = "A short description of your project"
-authors = [{ name = "Your Name", email = "your.email@example.com" }]
-dependencies = [
-    "mcp[cli]>=1.6.0",
-]
-requires-python = ">=3.10"
-
 [tool.poetry]
 name = "did-wba-server"
 version = "0.1.0"
@@ -34,6 +24,7 @@ canonicaljson = "^2.0.0"
 pydantic = "^2.3.0"
 pydantic-settings = "^2.0.0"
 httpx = "^0.28.1"
+mcp = {extras = ["cli"], version = ">=1.6.0"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
