--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,25 @@
-HOST=localhost
-PORT=8000
+# DID WBA Example Environment Configuration
+# Copy this file to .env and modify the values as needed
+
+# Server configuration
+LOCAL_HOST=0.0.0.0
+LOCAL_PORT=8000
 DEBUG=true
-JWT_SECRET_KEY=your_secret_key
+
+# JWT settings
+# JWT_SECRET_KEY is not used when using public/private key authentication
+# JWT_SECRET_KEY=your_jwt_secret_key_change_this_in_production
 JWT_ALGORITHM=RS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
+JWT_PRIVATE_KEY_PATH=doc/test_jwt_key/private_key.pem
+JWT_PUBLIC_KEY_PATH=doc/test_jwt_key/public_key.pem
+
+# DID settings
+DID_DOCUMENTS_PATH=did_keys
+
+# Target server settings (for client requests)
 TARGET_SERVER_HOST=localhost
 TARGET_SERVER_PORT=8000
-WBA_SERVER_DOMAINS=localhost:8000
+
+# WBA Server domains (comma separated)
+WBA_SERVER_DOMAINS=localhost:8000,127.0.0.1:8000
